--- a/index.html
+++ b/index.html
@@ -61,6 +61,104 @@
       </div>
     </header>
 
+    <div class="mobile-menu" id="mobile-menu">
+      <button
+        class="mobile-menu-close-btn close-button"
+        type="button"
+        aria-label="Close mobile menu"
+      >
+        <svg class="mobile-menu-close-icon close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1-1"></use>
+        </svg>
+      </button>
+
+      <nav class="mobile-menu-nav">
+        <ul class="mobile-nav-list">
+          <li>
+            <a href="./index.html" class="mobile-nav-link current">Studio</a>
+          </li>
+          <li><a href="" class="mobile-nav-link">Portfolio</a></li>
+          <li><a href="" class="mobile-nav-link">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <div class="mobile-menu-bottom">
+        <address class="mobile-menu-contacts">
+          <ul class="mobile-contacts-list">
+            <li>
+              <a href="tel:+110001111111" class="mobile-contacts-link phone"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="mobile-contacts-link email"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <div class="mobile-menu-socials">
+          <ul class="mobile-social-list">
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Instagram link"
+              >
+                <svg class="social-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Twitter link"
+              >
+                <svg class="social-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Facebook link"
+              >
+                <svg class="social-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="LinkedIn link"
+              >
+                <svg class="social-icon" width="16" height="16">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <main>
       <section class="main-page-title office">
         <div class="container">
