add styles css index html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
             </li>
           </ul>
         </address>
+        <!--<button type="button" class="mobile-menu-open-btn" aria-label="Open mobile menu" aria-expanded="false"
+                aria-controls="mobile-menu">
+                <svg class="mobile-menu-open-btn-icon" width="24" height="24">
+                    <use href="./images/icons.svg#heroicons-solid"></use>
+                </svg>
+            </button>-->
       </div>
     </header>
-
+    <!--mobile menu-->
     <div class="mobile-menu" id="mobile-menu">
       <button
         class="mobile-menu-close-btn close-button"
@@ -230,6 +236,7 @@
           <h2 class="main-title-team">Our Team</h2>
           <ul class="team-list">
             <li class="team-name">
+              <!--srcset="./images/mark_guerrero.jpg 1x, ./images/img-2X/mark_guerrero_2x.jpg 2x"-->
               <img
                 src="./images/Mark.jpg"
                 alt="Mark Guerrero"
@@ -272,6 +279,7 @@
               </div>
             </li>
             <li class="team-name">
+              <!--srcset="./images/tom_ford.jpg 1x, ./images/img-2X/tom_ford_2x.jpg 2x"-->
               <img
                 src="./images/Tom.jpg"
                 alt="Tom Ford"
@@ -314,6 +322,7 @@
               </div>
             </li>
             <li class="team-name">
+              <!--srcset="./images/camila_garcia.jpg 1x, ./images/img-2X/camila_garcia_2x.jpg 2x"-->
               <img
                 src="./images/Camila.jpg"
                 alt="Camila Garcia"
@@ -356,6 +365,7 @@
               </div>
             </li>
             <li class="team-name">
+              <!--srcset="./images/daniel_wilson.jpg 1x, ./images/img-2X/daniel_wilson_2x.jpg 2x"-->
               <img
                 src="./images/Daniel.jpg"
                 alt="Daniel Wilson"
@@ -406,6 +416,19 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/banking_app_desc.jpg 1x, ./images/img-desc/banking_app_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/banking_app_tablet.jpg 1x, ./images/img-tablet/banking_app_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/banking_app_mobile.jpg 1x, ./images/img-mobile/banking_app_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/banking_app_desc.jpg" alt="Banking App" width="360"
+                                        height="300">
+                                </picture>-->
                 <img src="./images/Banking.jpg" alt="Banking App" width="360" />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -420,6 +443,20 @@
             </li>
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/cashless_payment_desc.jpg 1x, ./images/img-desc/cashless_payment_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/cashless_payment_tablet.jpg 1x, ./images/img-tablet/cashless_payment_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/cashless_payment_mobile.jpg 1x, ./images/img-mobile/cashless_payment_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/cashless_payment_desc.jpg" alt="Cashless Payment"
+                                        width="360" height="300">
+                                </picture>-->
+
                 <img
                   src="./images/Payment.jpg"
                   alt="Cashless Payment"
@@ -438,6 +475,19 @@
             </li>
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/meditation_app_desc.jpg 1x, ./images/img-desc/meditation_app_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/meditation_app_tablet.jpg 1x, ./images/img-tablet/meditation_app_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/meditation_app_mobile.jpg 1x, ./images/img-mobile/meditation_app_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/meditation_app_desc.jpg" alt="Meditation App"
+                                        width="360" height="300">
+                                </picture>-->
                 <img src="./images/App.jpg" alt="Meditation App" width="360" />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -452,6 +502,19 @@
             </li>
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/taxi_service_desc.jpg 1x, ./images/img-desc/taxi_service_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/taxi_service_tablet.jpg 1x, ./images/img-tablet/taxi_service_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/taxi_service_mobile.jpg 1x, ./images/img-mobile/taxi_service_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/taxi_service_desc.jpg" alt="Taxi Service" width="360"
+                                        height="300">
+                                </picture>-->
                 <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -466,6 +529,19 @@
             </li>
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/screen_illustrations_desc.jpg 1x, ./images/img-desc/screen_illustrations_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/screen_illustrations_tablet.jpg 1x, ./images/img-tablet/screen_illustrations_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/screen_illustrations_mobile.jpg 1x, ./images/img-mobile/screen_illustrations_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/screen_illustrations_desc.jpg" alt="Screen
+                                        Illustrations" width="360" height="300">
+                                </picture>-->
                 <img
                   src="./images/Screen.jpg"
                   alt="Screen Illustrations"
@@ -484,6 +560,19 @@
             </li>
             <li class="portfolio-list-item">
               <div class="overlay">
+                <!--<picture>
+                                    <source media="(min-width: 1158px)"
+                                        srcset="./images/img-desc/online_courses_desc.jpg 1x, ./images/img-desc/online_courses_desc_2x.jpg 2x"
+                                        type="image/webp">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/img-tablet/online_courses_tablet.jpg 1x, ./images/img-tablet/online_courses_tablet@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <source media="(max-width: 767px)"
+                                        srcset="./images/img-mobile/online_courses_mobile.jpg 1x, ./images/img-mobile/online_courses_mobile@2x.jpg 2x"
+                                        type="image/jpeg">
+                                    <img src="./images/img-desc/online_courses_desc.jpg" alt="Online Courses"
+                                        width="360" height="300">
+                                </picture>-->
                 <img
                   src="./images/Online.jpg"
                   alt="Online Courses"
