modified css and html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
         </div>
       </div>
     </div>
-
     <main>
       <section class="hero">
         <div class="container">
@@ -243,7 +242,7 @@
             <li class="team-list-item">
               <img
                 srcset="
-                  ./images/Mark.jpg                    1x,
+                  ./images/mark_guerrero.jpg           1x,
                   ./images/img-2X/mark_guerrero_2x.jpg 2x
                 "
                 src="./images/Mark.jpg"
@@ -640,8 +639,7 @@
                   />
                   <img
                     src="./images/img-desc/screen_illustrations_desc.jpg"
-                    alt="Screen
-                                        Illustrations"
+                    alt="Screen Illustrations"
                     width="360"
                     height="300"
                   />
