--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </header>
     <!--mobile menu-->
-    <div class="mobile-menu" id="mobile-menu">
+    <div class="mobile-menu is-ope" id="mobile-menu">
       <button
         class="mobile-menu-close-btn close-button"
         type="button"
@@ -121,8 +121,8 @@
                 rel="noopener noreferrer"
                 aria-label="Instagram link"
               >
-                <svg class="social-icon" width="16" height="16">
-                  <use href="./images/sprite.svg#instagram"></use>
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -134,8 +134,8 @@
                 rel="noopener noreferrer"
                 aria-label="Twitter link"
               >
-                <svg class="social-icon" width="16" height="16">
-                  <use href="./images/sprite.svg#twitter"></use>
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -147,8 +147,8 @@
                 rel="noopener noreferrer"
                 aria-label="Facebook link"
               >
-                <svg class="social-icon" width="16" height="16">
-                  <use href="./images/sprite.svg#facebook"></use>
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -160,8 +160,8 @@
                 rel="noopener noreferrer"
                 aria-label="LinkedIn link"
               >
-                <svg class="social-icon" width="16" height="16">
-                  <use href="./images/sprite.svg#linkedin"></use>
+                <svg class="icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -242,10 +242,10 @@
             <li class="team-list-item">
               <img
                 srcset="
-                  ./images/mark_guerrero.jpg           1x,
-                  ./images/img-2X/mark_guerrero_2x.jpg 2x
+                  ./images/mark_guerrero.jpg               1x,
+                  ./images/img-2X/Mark_Guerrero@2x-min.jpg 2x
                 "
-                src="./images/Mark.jpg"
+                src="./images/mark_guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -288,10 +288,10 @@
             <li class="team-list-item">
               <img
                 srcset="
-                  ./images/tom_ford.jpg           1x,
-                  ./images/img-2X/tom_ford_2x.jpg 2x
+                  ./images/tom_ford.jpg               1x,
+                  ./images/img-2X/Tom_Ford@2x-min.jpg 2x
                 "
-                src="./images/Tom.jpg"
+                src="./images/tom_ford.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -334,10 +334,10 @@
             <li class="team-list-item">
               <img
                 srcset="
-                  ./images/camila_garcia.jpg           1x,
-                  ./images/img-2X/camila_garcia_2x.jpg 2x
+                  ./images/camila_garcia.jpg               1x,
+                  ./images/img-2X/Camila_Garcia@2x-min.jpg 2x
                 "
-                src="./images/Camila.jpg"
+                src="./images/camila_garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -380,10 +380,10 @@
             <li class="team-list-item">
               <img
                 srcset="
-                  ./images/daniel_wilson.jpg           1x,
-                  ./images/img-2X/daniel_wilson_2x.jpg 2x
+                  ./images/daniel_wilson.jpg               1x,
+                  ./images/img-2X/Daniel_Wilson@2x-min.jpg 2x
                 "
-                src="./images/Daniel.jpg"
+                src="./images/daniel_wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
